# sembed

./: README.md  pyproject.toml
src/: sembed.py
